--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body { font-family: 'Inter', sans-serif; -webkit-tap-highlight-color: transparent; }
         .perspective-1000 { perspective: 1000px; }
         .rotate-y-180 { transform: rotateY(180deg); }
-        .preserve-3d { transform-style: preserve-3d; }
+        .preserve-3d { transform-style: perspective-3d; }
         .backface-hidden { backface-visibility: hidden; }
     </style>
 <script type="importmap">
@@ -19,12 +19,15 @@
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 overflow-x-hidden">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
