--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; -webkit-tap-highlight-color: transparent; }
-        .perspective-1000 { perspective: 1000px; }
-        .rotate-y-180 { transform: rotateY(180deg); }
-        .preserve-3d { transform-style: perspective-3d; }
-        .backface-hidden { backface-visibility: hidden; }
+        body { 
+          font-family: 'Inter', sans-serif; 
+          -webkit-tap-highlight-color: transparent; 
+        }
+        .perspective-1000 { 
+          perspective: 1000px; 
+          -webkit-perspective: 1000px;
+        }
+        .rotate-y-180 { 
+          transform: rotateY(180deg); 
+          -webkit-transform: rotateY(180deg);
+        }
+        .preserve-3d { 
+          transform-style: preserve-3d; 
+          -webkit-transform-style: preserve-3d;
+        }
+        .backface-hidden { 
+          backface-visibility: hidden; 
+          -webkit-backface-visibility: hidden;
+        }
     </style>
 <script type="importmap">
 {
